Issue #3 - Fix wonkiness of modal and bg image
Background image sometimes didn't match up with the modal dialog size.
Adding overflow:hidden allowed the image size and dialog size to be
the same without scrollbars or weird white space.

--- a/style.css
+++ b/style.css
@@ -154,15 +154,15 @@ dialog:not([open]) {
 }
 
 dialog {
-    width: 408px;
-    height: 271px;
+    width: 400px;
+    height: 266px;
     display: grid;
     grid-template-columns: repeat(12, calc(100px / 3));
     grid-template-rows: repeat(8, calc(100px / 3));
     align-items: center;
-    background-image: url("images/peter-herrmann-aT88kga0g_M-unsplash.png");
-    background-size: contain;
-    background-repeat: no-repeat;
+    background: url("images/peter-herrmann-aT88kga0g_M-unsplash.png") no-repeat center center fixed;
+    background-size: 400px 266px cover;
+    overflow: hidden;    /* Necessary to prevent scrollbars on modal */
     padding: 0px;
     color: var(--main-color);
     border: solid 5px black;
